[package]
name = "avian-pinball"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.3.0"
bevy = { version = "0.16.1", features = ["wayland"] }
log = "0.4.27"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
