[package]
name = "avian-pinball"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.3.1", features = ["bevy_diagnostic", "diagnostic_ui"]}
bevy = { version = "0.16.1", features = ["wayland"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
